# mcp-grpc-transport-proto

./: .gitattributes  .gitignore  README.md  generate.py  pyproject.toml
.github/workflows/: ci.yml  pr_autogen.yaml
docs/: BUILDING.md
examples/: README.md  basic_usage.py
proto/: mcp.proto  mcp_messages.proto
src/mcp_grpc_transport_proto/: mcp_messages_pb2.py  mcp_messages_pb2.pyi  mcp_messages_pb2_grpc.py  mcp_pb2.py  mcp_pb2_grpc.py
src/mcp_transport_proto/: mcp_messages_pb2.py  mcp_messages_pb2.pyi  mcp_pb2.py  mcp_pb2.pyi  mcp_pb2_grpc.py
