[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-transport-proto"
version = "0.1.0"
description = "Generated gRPC protobufs for MCP"
readme = "README.md"
authors = [
  { name = "Google", email = "no-reply@google.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "protobuf>=5.26.1",
    "grpcio>=1.63.0"
]

[project.urls]
"Homepage" = "https://github.com/GoogleCloudPlatform/mcp-grpc-transport-proto"
"Bug Tracker" = "https://github.com/GoogleCloudPlatform/mcp-grpc-transport-proto/issues"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "grpcio-tools>=1.76.0",
]
